converting front page from resume to actual website

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -3,7 +3,7 @@
 @import "partials/mixins";
 @import "partials/normalize";
 @import "partials/flex";
-@import "partials/base";
+@import "partials/base-resume";
 
 // modules
 @import "modules/header";
