--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,3 +1,39 @@
+@-moz-keyframes bounce {
+  0% {
+    top: 0; }
+  25% {
+    top: -3px; }
+  50% {
+    top: -5px; }
+  75% {
+    top: -3px; }
+  100% {
+    top: 0; } }
+
+@-webkit-keyframes bounce {
+  0% {
+    top: 0; }
+  25% {
+    top: -3px; }
+  50% {
+    top: -5px; }
+  75% {
+    top: -3px; }
+  100% {
+    top: 0; } }
+
+@keyframes bounce {
+  0% {
+    top: 0; }
+  25% {
+    top: -3px; }
+  50% {
+    top: -5px; }
+  75% {
+    top: -3px; }
+  100% {
+    top: 0; } }
+
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
 	 ========================================================================== */
@@ -491,14 +527,15 @@ template {
       flex-basis: 100% !important; } }
 
 body {
-  background: #2b2a2a;
-  font-family: "Roboto Slab", serif;
-  color: #fff;
+  background: #fff;
+  color: #000;
   padding: 36px 0;
+  font-family: "Oswald", sans-serif;
   position: relative; }
   body h1,
-  body h2 {
-    font-family: Steelfish; }
+  body h2,
+  body h3 {
+    font-family: "Courier Prime", serif; }
   body h1 {
     color: #5ce5d5;
     font-size: 54px; }
@@ -507,21 +544,102 @@ body {
     font-size: 30px; }
   body li {
     margin-bottom: 12px; }
+  body img {
+    max-width: 100%; }
 
 .container {
   max-width: 1024px;
   margin: 0 auto;
   padding: 0 15px; }
 
-header.main-header #contact {
-  text-align: center; }
-  header.main-header #contact div {
-    margin: 3px 0; }
+.main-header {
+  max-width: 15vw;
+  padding: 0 42px;
+  background-color: black;
+  color: white;
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh; }
+  .main-header h1 {
+    color: white;
+    font-size: 11vw;
+    letter-spacing: -0.4vw; }
+    .main-header h1 span {
+      margin-left: -2vw; }
+  .main-header a {
+    color: white; }
+  .main-header #contact {
+    font-size: 1.4vw;
+    margin: 0 0 24px; }
+    .main-header #contact div {
+      margin-bottom: 12px; }
+  .main-header #skillset {
+    padding: 24px 0; }
+    .main-header #skillset figure {
+      margin: 12px 0;
+      width: 25%;
+      text-align: center; }
+      .main-header #skillset figure i {
+        font-size: 2.2vw;
+        transition: 0.3s all ease; }
+      .main-header #skillset figure:hover i {
+        transform: scale(1.1);
+        transition: 0.3s all ease; }
+  .main-header nav#social {
+    padding: 24px 0;
+    width: 100%; }
+    .main-header nav#social a {
+      font-size: 3vw; }
 
-.experiences aside.experience {
-  margin: 12px 0; }
-  .experiences aside.experience .position-details span {
-    color: #7898fb; }
-  .experiences aside.experience .position-details .job-description {
-    font-style: italic;
-    margin-top: 12px; }
+section.slide h2 {
+  color: #f0f0f0;
+  font-size: 16vw;
+  word-spacing: -2vw;
+  margin: 0 0 24px;
+  position: absolute;
+  z-index: -1; }
+
+section.slide article {
+  font-size: 4vw;
+  line-height: 1.5;
+  margin-top: 110px;
+  padding-right: 190px;
+  text-shadow: 1px 1px 1px gray;
+  padding-left: 50px;
+  text-align: right; }
+  section.slide article a {
+    color: yellow;
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+    font-weight: bold; }
+
+section.slide figure {
+  position: relative; }
+
+section.slide .work-tile {
+  margin-top: 48px; }
+  section.slide .work-tile h3 {
+    font-size: 3vw;
+    padding: 0 12px;
+    margin-bottom: 0;
+    border-left: 6px solid;
+    position: relative; }
+    section.slide .work-tile h3:after {
+      content: "";
+      position: absolute;
+      bottom: -12px;
+      left: 1vw;
+      background-color: #99ddff;
+      height: 39px;
+      width: 70%;
+      z-index: -1; }
+  section.slide .work-tile p {
+    padding: 12px;
+    border-left: 6px solid;
+    margin-top: 0;
+    font-size: 2.5vw; }
+  section.slide .work-tile figure {
+    max-height: 400px;
+    overflow-x: scroll;
+    margin: 0;
+    padding: 0 6px; }
