--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,12 +1,13 @@
 body {
-  background: $gray;
-  font-family: "Roboto Slab", serif;
-  color: #fff;
+  background: #fff;
+  color: #000;
   padding: 36px 0;
+  font-family: "Oswald", sans-serif;
   position: relative;
   h1,
-  h2 {
-    font-family: Steelfish;
+  h2,
+  h3 {
+    font-family: "Courier Prime", serif;
   }
   h1 {
     color: $green;
@@ -18,6 +19,9 @@ body {
   }
   li {
     margin-bottom: 12px;
+  }
+  img {
+    max-width: 100%;
   }
 }
 .container {
